[package]
name = "recent-messages-formatter"
authors = ["randers"]
description = "Simple program to fetch a Twitch channel's recent messages and to print all normal messages in a simple readable format."
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = { version = "5", default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots", "json", "blocking"] }
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
itertools = "0.11"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
